# myshop

./: .pre-commit-config.yaml  db.sqlite3  package-lock.json  package.json  pyproject.toml
config/: settings.py  urls.py
shop/: admin.py  forms.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_customuser_telefone.py
shop/templates/: base.html  index.html
shop/templates/registration/: index.html  login.html  register.html
shop/templates/user/: home.html
static/css/: style.css  style.css.map
static/sass/: style.scss
