[tool.poetry]
name = "djangoshop"
version = "0.1.0"
description = ""
authors = ["Gustavo <ghenriquer10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.1"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
isort = "^5.13.2"
djlint = "^1.34.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
